added starting code to html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,37 @@
-HELLO WORLD
+<!DOCTYPE html>
+<html lang="en-US">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,400i,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./Assets/style.css"/>
+    <title>Film Pulse</title>
+</head>
+
+<body>
+    <header class="nav-bar">
+        <div class="movie">
+            <button class="movie" id="movie-btn">Movie</button>
+        </div>
+        <div class="tv-show">
+            <button class="tv-show" id="tv-btn">TV SHOW</button>
+        </div>
+    </header>
+
+    <section class="search">
+        <label class="search-bar" id="search-box">
+            <input id="search" type="text" autofocus="true">
+        </label>
+    </section>
+
+</body>
+
+<main>
+    <section class="movie container">
+        <div id="random-movie">
+            <h1>Title movie</h1>
+        </div>
+
+    </section>
+</html>
