--- a/index.html
+++ b/index.html
@@ -12,15 +12,18 @@
 <body>
     <header class="nav-bar">
         <div class="movie">
-            <button class="movie" id="movie-btn">Movie</button>
+            <button id="movie-btn">Movie</button>
         </div>
         <div class="tv-show">
-            <button class="tv-show" id="tv-btn">TV SHOW</button>
+            <button id="tv-btn">TV SHOW</button>
+        </div>
+        <div class="Something">
+            <button id="something-btn">Something</button>
         </div>
     </header>
 
     <section class="search">
-        <label class="search-bar" id="search-box">
+        <label id="search-box">
             <input id="search" type="text" autofocus="true">
         </label>
     </section>
@@ -30,8 +33,9 @@
 <main>
     <section class="movie container">
         <div id="random-movie">
+            <img src="./Images/Poster Image placeholder.png">
             <h1>Title movie</h1>
         </div>
 
     </section>
-</html>
+</html> 
