--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,400i,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./Assets/style.css"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
     <title>Film Pulse</title>
 </head>
 
@@ -22,10 +23,21 @@
         </div>
     </header>
 
-    <section class="search">
-        <label id="search-box">
-            <input id="search" type="text" autofocus="true">
-        </label>
+    <section class="search section">
+        <div class="containter">
+            <div class="columns is-centered">
+                <div class="column is-8">
+                    <div class="field has-addons">
+                        <div class="control is-expanded">
+                            <input id="search" type="text" autofocus="true">
+                        </div>
+                        <div class="control">
+                            <button class="button is-info">Search</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 
 </body>
