--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                             <input id="search" type="text" autofocus="true">
                         </div>
                         <div class="control">
-                            <button class="button is-info">Search</button>
+                            <button class="button is-info" id="searchButton">Search</button>
                         </div>
                     </div>
                 </div>
