Added JS Scripts

--- a/MovieOverview.html
+++ b/MovieOverview.html
@@ -38,6 +38,10 @@
     <section class="trailer-page"></section>
         <div id="trailerContainer"></div>
     </section>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="/Assets/js/common.js"></script>
+    <script src="/Assets/js/script.js"></script>
+    <script src="/Assets/js/info.js"></script>
 
     <style>
         .image img {
