added the Logo and fixed navbar

--- a/index.html
+++ b/index.html
@@ -12,16 +12,19 @@
 
 <body>
     <header class="navbar has-background-link">
-        <div class="container">
+        <div class="navbar-brand">
+           <img src="./Assets/Images/FilmPulse-logo.png" alt="Filmpulse Logo">
+        </div>
+        <div class="navbar-menu navbar-end">
             <div class="columns">
                 <div class="column">
-                    <button class="button is-link has-background-info" id="movie-btn">Movie</button>
+                    <button class="button has-background-info" id="movie-btn">Movie</button>
                 </div>
                 <div class="column">
-                    <button class="button is-link has-background-info" id="tv-btn">TV SHOW</button>
+                    <button class="button has-background-info" id="tv-btn">TV SHOW</button>
                 </div>
                 <div class="column">
-                    <button class="button is-link has-background-info" id="something-btn">Something</button>
+                    <button class="button has-background-info" id="something-btn">Something</button>
                 </div>
             </div>
         </div>
