Added Genre List and updated some lines for JS ID's

--- a/FilmPulse.html
+++ b/FilmPulse.html
@@ -42,12 +42,13 @@
         </section>
 
         <section class="movie container">
-            <div id="random-movie">
-                <img src="./Images/Poster Image placeholder.png" alt="Movie Poster">
-                <h1>Title movie</h1>
-            </div>
+            <div id="movie-posters"></div>
         </section>
     </main>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="/Assets/js/common.js"></script>
+    <script src="/Assets/js/script.js"></script>
+    <script src="/Assets/js/info.js"></script>
 </body>
 
 </html>
