--- a/MovieOverview.html
+++ b/MovieOverview.html
@@ -14,6 +14,7 @@
     <header class="nav-bar">
         <div class="movie">
             <button id="movie-btn">Movies</button>
+            <div class="genre-dropdown" id="movieGenreDropdown">
             <ul>
                 <li><a href="#">Action</a></li>
                 <li><a href="#">Adventure</a></li>
@@ -39,9 +40,37 @@
                 <li><a href="#">Spy</a></li>
                 <li><a href="#">Political</a></li>
             </ul>
+            </div>
         </div>
         <div class="tv-show">
             <button id="tv-show">TV SHOWS</button>
+            <div class="genre-dropdown" id="tvShwoGenreDropdown">
+                <ul>
+                    <li><a href="#">Action</a></li>
+                    <li><a href="#">Adventure</a></li>
+                    <li><a href="#">Animation</a></li>
+                    <li><a href="#">Comedy</a></li>
+                    <li><a href="#">Crime</a></li>
+                    <li><a href="#">Drama</a></li>
+                    <li><a href="#">Family</a></li>
+                    <li><a href="#">Fantasy</a></li>
+                    <li><a href="#">Horror</a></li>
+                    <li><a href="#">Mystery</a></li>
+                    <li><a href="#">Romance</a></li>
+                    <li><a href="#">Sci-Fi</a></li>
+                    <li><a href="#">Thriller</a></li>
+                    <li><a href="#">War</a></li>
+                    <li><a href="#">Wester</a></li>
+                    <li><a href="#">Documentary </a></li>
+                    <li><a href="#">Musical</a></li>
+                    <li><a href="#">Historical</a></li>
+                    <li><a href="#">Biographical</a></li>
+                    <li><a href="#">Sports</a></li>
+                    <li><a href="#">Supernatural</a></li>
+                    <li><a href="#">Spy</a></li>
+                    <li><a href="#">Political</a></li>
+                </ul>
+            </div>
         </div>
         <div class="something">
             <button id="something-btn">Something</button>
@@ -49,8 +78,9 @@
     </header>
 
     <section class="main-page">
+        <div id="movie-posters"></div>
         <div class="card-content">
-            <img id="posterImage" src="" alt="MoviePoster">
+            <img id="posterImage" src="" alt="moviePoster">
             <p class="title" id="movieTitle">Title</p>
             <p id="subtitle" id="movieYear">Year</p>
             <p id="moviePlot">Plot</p>
