added movie-posters ID to replace placeholder

--- a/index.html
+++ b/index.html
@@ -54,8 +54,7 @@
                     <div class="column">
                         <h1 class="title">Title movie</h1>
                     </div>
-                    <div class="column is-one-third">
-                        <img src="./Assets/Images/Poster Image placeholder.png" alt="Movie Poster">
+                    <div class="column is-one-third" id="movie-posters">
                     </div>
                 </div>
             </div>
