Added JS Script popular

--- a/FilmPulse.html
+++ b/FilmPulse.html
@@ -49,6 +49,7 @@
     <script src="/Assets/js/common.js"></script>
     <script src="/Assets/js/script.js"></script>
     <script src="/Assets/js/info.js"></script>
+    <script src="/Assets/js/popular.js"></script>
 </body>
 
 </html>
