need to get to main - self note

--- a/MovieOverview.html
+++ b/MovieOverview.html
@@ -82,7 +82,7 @@
         <div class="card-content">
             <img id="posterImage" src="" alt="moviePoster">
             <p class="title" id="movieTitle">Title</p>
-            <p id="subtitle" id="movieYear">Year</p>
+            <p id="movieYear">Year</p>
             <p id="moviePlot">Plot</p>
             <p id="movieDirector">Director</p>
             <p id="movieActors">Actors<p>
