--- a/genreoverview.html
+++ b/genreoverview.html
@@ -96,9 +96,9 @@
 
     
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="/Assets/js/common.js"></script>
-    <script src="/Assets/js/info.js"></script>
-    <script src="/Assets/js/genre.js"></script>
+    <script src="./assets/js/common.js"></script>
+    <script src="./assets/js/info.js"></script>
+    <script src="./assets/js/genre.js"></script>
     
   
    
