changed a in a assets

--- a/index.html
+++ b/index.html
@@ -109,10 +109,10 @@
     </footer>
 </div>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="./assets/js/common.js"></script>
-    <script src="./assets/js/info.js"></script>
-    <script src="./assets/js/popular.js"></script>
-    <script src="./assets/js/genre.js"></script>
+    <script src="./Assets/js/common.js"></script>
+    <script src="./Assets/js/info.js"></script>
+    <script src="./Assets/js/popular.js"></script>
+    <script src="./Assets/js/genre.js"></script>
    
     
    
