--- a/tvshowoverview.html
+++ b/tvshowoverview.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="./Assets/overview.css">
-    <title>Film Pulse - Movie Overview</title>
+    <title>Film Pulse - Tv Show Overview</title>
    
 </head>
 <body>
@@ -115,9 +115,7 @@
                                     <img id="posterImage" src="" alt="moviePoster">
                                 </div>
                             </div>
-                            <div class="column is-8">
-                                <div id="trailerContainer"></div>
-                            </div>
+                           
                         </div>
                         <div class="card-content has-text-white">
                             <p id="moviePlot">Plot</p>
@@ -140,7 +138,7 @@
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="./Assets/js/common.js"></script>
-    <script src="./Assets/js/genre.js"></script>
+    <script src="./Assets/js/tvgenre.js"></script>
     <script src="./Assets/js/info.js"></script>
  
 
