--- a/genreoverview.html
+++ b/genreoverview.html
@@ -26,7 +26,7 @@
 						<div class="navbar-item has-dropdown is-hoverable">
 							<a class="navbar-link has-text-white">Movie Genres</a>
 							<div class="navbar-dropdown has-background-dark">
-								<a class="navbar-item has-text-white" href="genreoverview.html?genre=Action">Action</a> <a class="navbar-item has-text-white" href="genreoverview.html?genre=Adventure">Adventure</a> <a class="navbar-item has-text-white" href="genreoverview.html?genre=Animation">Animation</a> <a class="navbar-item has-text-white" href="genreoverview.html?genre=Comedy">Comedy</a> <a class="navbar-item has-text-white" href="genreoverview.html?genre=Crime">Crime</a> <a class="navbar-item has-text-white" href="genreoverview.html?genre=Drama">Drama</a> <a class="navbar-item has-text-white" href="genreoverview.html?genre=Family">Family</a> <a class="navbar-item has-text-white" href="genreoverview.html?genre=Fantasy">Fantasy</a> <a class="navbar-item has-text-white" href="genreoverview.html?genre=Horror">Horror</a> <a class="navbar-item has-text-white" href="genreoverview.html?genre=Mystery">Mystery</a> <a class="navbar-item has-text-white" href="genreoverview.html?genre=Romance">Romance</a> <a class="navbar-item has-text-white" href="genreoverview.html?genre=Sci-Fi">Sci-Fi</a> <a class="navbar-item has-text-white" href="genreoverview.html?genre=Thriller">Thriller</a> <a class="navbar-item has-text-white" href="genreoverview.html?genre=War">War</a> <a class="navbar-item has-text-white" href="genreoverview.html?genre=Western">Western</a> <a class="navbar-item has-text-white" href="genreoverview.html?genre=Documentary">Documentary</a> <a class="navbar-item has-text-white" href="genreoverview.html?genre=Musical">Musical</a> <a class="navbar-item has-text-white" href="genreoverview.html?genre=Historical">Historical</a>
+								<a class="navbar-item has-text-white" href="genreoverview.html?genre=Action">Action</a> <a class="navbar-item has-text-white" href="genreoverview.html?genre=Adventure">Adventure</a> <a class="navbar-item has-text-white" href="genreoverview.html?genre=Animation">Animation</a> <a class="navbar-item has-text-white" href="genreoverview.html?genre=Comedy">Comedy</a> <a class="navbar-item has-text-white" href="genreoverview.html?genre=Crime">Crime</a> <a class="navbar-item has-text-white" href="genreoverview.html?genre=Drama">Drama</a> <a class="navbar-item has-text-white" href="genreoverview.html?genre=Family">Family</a> <a class="navbar-item has-text-white" href="genreoverview.html?genre=Fantasy">Fantasy</a> <a class="navbar-item has-text-white" href="genreoverview.html?genre=Horror">Horror</a> <a class="navbar-item has-text-white" href="genreoverview.html?genre=Mystery">Mystery</a> <a class="navbar-item has-text-white" href="genreoverview.html?genre=Romance">Romance</a> <a class="navbar-item has-text-white" href="genreoverview.html?genre=Sci-Fi">Sci-Fi</a>  <a class="navbar-item has-text-white" href="genreoverview.html?genre=War">War</a> <a class="navbar-item has-text-white" href="genreoverview.html?genre=Western">Western</a> <a class="navbar-item has-text-white" href="genreoverview.html?genre=Documentary">Documentary</a> <a class="navbar-item has-text-white" href="genreoverview.html?genre=Musical">Musical</a> <a class="navbar-item has-text-white" href="genreoverview.html?genre=Historical">Historical</a>
 							</div>
 						</div>
 						<div class="navbar-item has-dropdown is-hoverable">
@@ -121,6 +121,10 @@
 		 });
 		 
 		</script> 
+	</div>
+	<div id="loading-indicator" class="loading-spinner">
+		<div class="spinner"></div>
+		<div class="loading-text">Loading...</div>
 	</div>
 </body>
 </html>
