--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,400i,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="./assets/css/index.css">
+    <link rel="stylesheet" href="./Assets/css/index.css">
     <title>FilmPulse - About Us</title>
     <style>
         .contributor {
@@ -182,10 +182,10 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     
    
-    <script src="./assets/js/info.js"></script>
-    <script src="./assets/js/popular.js"></script>
-    <script src="./assets/js/common.js"></script>
-    <script src="./assets/js/tvgenre.js"></script>
+    <script src="./Assets/js/info.js"></script>
+    <script src="./Assets/js/popular.js"></script>
+    <script src="./Assets/js/common.js"></script>
+    <script src="./Assets/js/tvgenre.js"></script>
  
     
     <script>
