--- a/genreoverview.html
+++ b/genreoverview.html
@@ -7,7 +7,7 @@
 	<link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,400i,700&display=swap" rel="stylesheet">
 	<link href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css" rel="stylesheet">
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-	<link href="./assets/css/genre.css" rel="stylesheet">
+	<link href="./Assets/css/genre.css" rel="stylesheet">
 	<title>FilmPulse - Movie Genre</title>
 </head>
 <body>
@@ -55,11 +55,11 @@
 		 
 		<script src="https://code.jquery.com/jquery-3.6.0.min.js">
 		</script> 
-		<script src="./assets/js/common.js">
+		<script src="./Assets/js/common.js">
 		</script> 
-		<script src="./assets/js/info.js">
+		<script src="./Assets/js/info.js">
 		</script> 
-		<script src="./assets/js/genre.js">
+		<script src="./Assets/js/genre.js">
 		</script> 
 		<script>
 		      document.addEventListener('DOMContentLoaded', function () {
