--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,400i,700&display=swap" rel="stylesheet">
 	<link href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css" rel="stylesheet">
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-	<link href="./assets/css/index.css" rel="stylesheet">
+	<link href="./Assets/css/index.css" rel="stylesheet">
 	<title>FilmPulse - Home</title>
 	<style>
         .trailers-container {
@@ -108,17 +108,17 @@
 	</div>
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js">
 	</script> 
-	<script src="./assets/js/tvgenre.js">
+	<script src="./Assets/js/tvgenre.js">
 	</script> 
-	<script src="./assets/js/info.js">
+	<script src="./Assets/js/info.js">
 	</script> 
-	<script src="./assets/js/popular.js">
+	<script src="./Assets/js/popular.js">
 	</script> 
-	<script src="./assets/js/common.js">
+	<script src="./Assets/js/common.js">
 	</script> 
-	<script src="./assets/js/banner.js">
+	<script src="./Assets/js/banner.js">
 	</script> 
-	<script src="./assets/js/latesttrailer.js">
+	<script src="./Assets/js/latesttrailer.js">
 	</script> 
 
 
