--- a/movieoverview.html
+++ b/movieoverview.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta content="width=device-width, initial-scale=1.0" name="viewport">
 	<link rel="icon" type="image/png" sizes="64x64" href="./Assets/Images/filmpulseicon.png">
+	<meta http-equiv="Permissions-Policy" content="accelerometer=(), camera=(), geolocation=()">
 	<link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,400i,700&display=swap" rel="stylesheet">
 	<link href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css" rel="stylesheet">
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
